examples/v0.3/errors/nested_array_type_mismatch.nova
/*
Expected Error

Datatype mismatch.
*/

matrix: [[N]] = [
    [1, 2],
    [3, 4]
]

matrix[0][1] = "hello"